# pymocks

./: .gitignore  LISENCE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tests.yml
src/pymocks/: __init__.py  _endpoints.py  _httpx_endpoints.py  _mock.py
tests/: dumy_module.py  test_endpoints.py  test_httpx_endpoints.py  test_mock.py  test_smoke.py
