[project]
name = "py-mocks"
version = "0.4.0"
description = "Testing utility decorators for mocking functions, variables, and HTTP endpoints"
readme = "README.md"
authors = [{ name = "Yeison Liscano" }]
maintainers = [{ name = "Yeison Liscano" }]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
keywords = ["testing"]
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2,<10.0.0",
    "aioresponses>=0.7.8,<0.8.0"
]

[project.urls]
Homepage = "https://github.com/yeison-liscano/pymocks"
Issues = "https://github.com/yeison-liscano/pymocks/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymocks"]

[dependency-groups]
dev = [
    "pytest-asyncio",
    "aiohttp",
    "pyright",
    "ruff",
]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = [".venv", "build", "dist"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # conflicts with ruff formatter
    "D203",    # conflicts with D211 (no-blank-line-before-class)
    "D213",    # conflicts with D212 (multi-line-summary-second-line)
    "ISC001",  # conflicts with ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert is fine in tests
    "D100",   # missing module docstring
    "D101",   # missing class docstring
    "D102",   # missing method docstring
    "D103",   # missing function docstring
    "D104",   # missing package docstring
    "ANN",    # type annotations not required in tests
    "PT011",  # broad pytest.raises is acceptable in tests
    "E731",   # lambda assignment is fine in tests
    "B009",   # getattr with constant needed for dynamic module attrs
    "ARG001", # unused args expected in stub functions for signature tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
